# qcp

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  clang-tidy.cmake  gperf.cmake
.github/workflows/: cmake-multi-platform.yml
bench/: benchmark.cc  bm_tokenizer.cc
include/: basetype.h  diagnostics.h  emittertraits.h  expr.h  keywords.gperf  keywords.h  llvmemitter.h  loc.h  operator.h  parser.h  scope.h  scopeinfo.h  stringpool.h  token.h  tokencounter.h  tokenizer.h  tracer.h  type.h  typefactory.h
include/defs/: and_or_operators.def  assign_operators.def  defines.def  directedmappedtypes.def  operators.def  tokens.def  types.def
src/: diagnostics.cc  keywords.cc  keywords.gperf  llvmemitter.cc  loc.cc  main.cc  operator.cc  stringpool.cc  token.cc  tokenizer.cc
test/: diagnostics.c  examples.c  test_parser.h  test_tokenizer.cc  test_types.cc  tester.cc
test/test1/: 1.c  10.c  100.c  101.c  102.c  103.c  104.c  105.c  106.c  107.c  108.c  109.c  11.c  110.c  111.c  112.c  113.c  114.c  115.c  116.c  117.c  118.c  119.c  12.c  120.c  121.c  122.c  123.c  124.c  125.c  126.c  127.c  128.c  129.c  13.c  130.c  14.c  15.c  16.c  17.c  (+89 more)
tools/: csmith.h
